<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardCamera"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_margin="30dp"
        app:cardCornerRadius="20dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/purple_200">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="@string/camera" />
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/etBrowse"
            android:layout_width="280dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_url"
            android:inputType="text"/>
        <Button
            android:id="@+id/web1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_200"
            android:text="@string/browse"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="Enter PhoneNumber"
            android:inputType="phone"/>
        <Button
            android:id="@+id/btnDial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_200"
            android:text="Dial"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnMsg"
        android:layout_width="match_parent"
        android:backgroundTint="@color/purple_200"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:text="@string/message"/>
    <Button
        android:id="@+id/btnEmail"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_200"
        android:text="@string/email"/>
</LinearLayout>